--- a/roda-core/roda-core/pom.xml
+++ b/roda-core/roda-core/pom.xml
@@ -1,6 +1,5 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<?xml version="1.0" encoding="UTF-8" ?>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<artifactId>roda-core</artifactId>
 	<packaging>jar</packaging>
@@ -43,16 +42,12 @@
 									<shadedClassifierName>jar-with-dependencies</shadedClassifierName>
 									<createDependencyReducedPom>false</createDependencyReducedPom>
 									<transformers>
-										<transformer
-											implementation="org.apache.maven.plugins.shade.resource.ComponentsXmlResourceTransformer" />
-										<transformer
-											implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer" />
-										<transformer
-											implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+										<transformer implementation="org.apache.maven.plugins.shade.resource.ComponentsXmlResourceTransformer" />
+										<transformer implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer" />
+										<transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
 											<mainClass>org.roda.core.RodaCoreFactory</mainClass>
 										</transformer>
-										<transformer
-											implementation="org.apache.maven.plugins.shade.resource.AppendingTransformer">
+										<transformer implementation="org.apache.maven.plugins.shade.resource.AppendingTransformer">
 											<!-- akka related conf appending -->
 											<resource>reference.conf</resource>
 										</transformer>
@@ -93,16 +88,12 @@
 									<shadedClassifierName>jar-with-dependencies</shadedClassifierName>
 									<createDependencyReducedPom>false</createDependencyReducedPom>
 									<transformers>
-										<transformer
-											implementation="org.apache.maven.plugins.shade.resource.ComponentsXmlResourceTransformer" />
-										<transformer
-											implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer" />
-										<transformer
-											implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+										<transformer implementation="org.apache.maven.plugins.shade.resource.ComponentsXmlResourceTransformer" />
+										<transformer implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer" />
+										<transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
 											<mainClass>org.roda.core.RodaCoreFactory</mainClass>
 										</transformer>
-										<transformer
-											implementation="org.apache.maven.plugins.shade.resource.AppendingTransformer">
+										<transformer implementation="org.apache.maven.plugins.shade.resource.AppendingTransformer">
 											<!-- akka related conf appending -->
 											<resource>reference.conf</resource>
 										</transformer>
@@ -434,6 +425,21 @@
 		<dependency>
 			<groupId>io.dropwizard.metrics</groupId>
 			<artifactId>metrics-core</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>io.prometheus</groupId>
+			<artifactId>simpleclient_dropwizard</artifactId>
+			<version>0.8.0</version>
+		</dependency>
+		<dependency>
+			<groupId>io.prometheus</groupId>
+			<artifactId>simpleclient_hotspot</artifactId>
+			<version>0.8.0</version>
+		</dependency>
+		<dependency>
+			<groupId>io.prometheus</groupId>
+			<artifactId>simpleclient_httpserver</artifactId>
+			<version>0.8.0</version>
 		</dependency>
 	</dependencies>
 </project>
