Adding missing prometheus logback integration dependency

--- a/roda-core/roda-core/pom.xml
+++ b/roda-core/roda-core/pom.xml
@@ -441,5 +441,10 @@
 			<artifactId>simpleclient_httpserver</artifactId>
 			<version>0.8.0</version>
 		</dependency>
+		<dependency>
+			<groupId>io.prometheus</groupId>
+			<artifactId>simpleclient_logback</artifactId>
+			<version>0.8.0</version>
+		</dependency>
 	</dependencies>
 </project>
